# learnopengl

./: .gitignore
breakout/: CMakeLists.txt
breakout/resources/shaders/sprite/: sprite.fs  sprite.vs
breakout/src/: game.cpp  game.h  main.cpp  resource_manager.cpp  resource_manager.h
breakout/src/graphics/: shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
test/: test.cpp
unit2_base_color/: CMakeLists.txt  basic_lighting.fs  basic_lighting.vs  basic_lighting2.fs  basic_lighting_diffuse.cpp  basic_lighting_exercise1.cpp  basic_lighting_exercise2.cpp  basic_lighting_exercise2.fs  basic_lighting_exercise2.vs  basic_lighting_exercise3.cpp  basic_lighting_exercise3.vs  basic_lighting_specular.cpp  color.fs  colors.cpp  light_caster.fs  light_caster2.fs  light_caster3.fs  light_caster4.fs  light_casters_directional.cpp  light_casters_point.cpp  light_casters_spot.cpp  light_casters_spot_soft.cpp  lighting_maps2.fs  lighting_maps4.fs  lighting_maps_diffuse.cpp  lighting_maps_exercise4.cpp  lighting_maps_specular.cpp  main.cpp  materials.cpp  materials.fs  materials.vs  materials_exercise.cpp  multiple_lights.cpp  multiple_lights.fs  multiple_lights_exercise2.cpp
unit2_base_color/glad/src/: glad.c
unit4_advanced_OpenGL/: CMakeLists.txt  aa_post.fs  aa_post.vs  advanced_glsl_ubo.cpp  anti_aliasing_multisampling.cpp  anti_aliasing_offscreen.cpp  asteroids.cpp  asteroids.fs  asteroids.vs  asteroids2.vs  asteroids_instanced.cpp  blue.fs  cubemaps_environment_mapping.cpp  cubemaps_environment_mapping.fs  cubemaps_skybox.cpp  geometry_shader.gs  geometry_shader.vs  geometry_shader_exploding.cpp  geometry_shader_exploding.gs  geometry_shader_exploding.vs  geometry_shader_houses.cpp  instancing.vs  instancing_quads.cpp  normal_visualization.cpp  normal_visualization.gs  normal_visualization.vs  skybox.vs
unit4_advanced_OpenGL/glad/include/glad/: glad.h
unit4_depth_testing/: CMakeLists.txt  blending.fs  blending_discard.cpp  blending_sorted.cpp  blending_sorted.fs  camera.h  cull_face.cpp  cull_face_exercise1.cpp  depth_testing.cpp  framebuffer.fs  framebuffers.cpp  framebuffers_screen.fs  stencil_testing.cpp  stencil_testing.fs
unit4_load_model/: CMakeLists.txt  main.cpp  mesh.h  model.h  model_loading.cpp  model_loading.fs
unit5_advanced_lighting/: CMakeLists.txt  advanced_lighting.cpp  advanced_lighting.fs  advanced_lighting.vs  bloom.cpp  deferred_shading.cpp  deferred_shading_volumes.cpp  gamma_correction.cpp  gamma_correction.fs  gamma_correction.vs  hdr.cpp  hdr2.cpp  normal_mapping.cpp  normal_mapping.fs  normal_mapping.vs  parallax_mapping.cpp  parallax_mapping.fs  parallax_occlusion_mapping.cpp  parallax_occlusion_mapping.fs  shadow_mapping_depth.cpp  shadow_mapping_shadows.cpp  steep_parallax_mapping.cpp  steep_parallax_mapping.fs  steep_parallax_mapping.vs
unit6_text_rendering/: CMakeLists.txt  text_rendering.cpp
unit_1/: CMakeLists.txt  hello_glsl.cpp  hello_glsl_exercise2.cpp  hello_glsl_exercise3.cpp  hello_triangle.cpp  hello_triangle_exercise1.cpp  hello_triangle_exercise2.cpp  hello_triangle_exercise3.cpp  hello_triangle_indexed.cpp  hello_window_clear.cpp  lesson_1.cpp  shader.h  shader2.vs  shader3.vs
unit_1_coordinate_systems/: CMakeCache.txt  CMakeLists.txt  Makefile  camera_circle.cpp  camera_class.cpp  camera_keyboard_dt.cpp  camera_mouse.cpp  camera_mouse_zoom.cpp  cmake_install.cmake  coordinate_system.fs  coordinate_system.vs  cube_vertices.cpp  main.cpp  unit_1_coordinate_systems  unit_1_coordinate_systems.cbp
unit_1_texture/: CMakeLists.txt  texture_combined.fs  texture_exercise2.fs  texture_exercise4.fs  texture_exercise4.vs  textures.cpp  textures_combined.cpp  textures_exercise2.cpp  textures_exercise3.cpp  textures_exercise4.cpp
unit_1_transformations/: CMakeLists.txt  main.cpp  transform.cpp
